style.css
body {
    font-family: 'Bebas Neue', sans-serif;
    font-family: 'Montserrat', sans-serif;
    margin: 0;
    overflow-x: hidden;
    background-color: rgb(37, 36, 36);
}

header {
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: rgb(73, 72, 72);
    width: 100%;
}

header img {
    height: 10vw;
}

header ul {
    display: flex;
    justify-content: space-around;
    width: 55vw;
  }

  header li {
    color: white;
    list-style: none;
    font-size: 1.6rem;
  }

header section {
    color: red;
}

.main {
    display: flex;
    flex-direction: column;
    align-items: center;
    color: white;
}


.top-banner {
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    background-color: black;
    padding: 1rem;
    width: 100%;
}

.top-banner img {
    margin: 3vh;
    max-height: 50vh;
    width: 35vw;
    height: auto;
}


.galeria {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
}

.galeria img { 
    margin: 3vh;
    max-height: 50vh;
    max-width: 20vw;
    height: auto;
}


footer {
    color: white;
    background-color: rgb(73, 72, 72);
    width: 100%;
    margin-top: 3vh;
    padding-top: 2vh;
    padding-bottom: 2vh;
}

@media screen and (max-width: 991px) {


    header {
        overflow-x: hidden;
      } 

    header img {
        height: 22vw;
    }

    header ul {
        margin-right: 3vw;
        width: 30vw;
        flex-direction: column;
        justify-content: flex-end;
    }

    header li {
        margin: 0.5vh;
    }

    .main img {
        margin: 3vh;
        max-height: 50vh;
        max-width: 70vw;
    }

    .top-banner {
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
    }

    .top-banner img {
        width: 75vw;
    }
    
    .top-banner-text {
        width: 70vw;
    }

}

